--- a/pages/3.html
+++ b/pages/3.html
@@ -81,7 +81,7 @@ input[type="range"] {
     <div class="player">
         <div class="title">🎵 Підказка в пісні</div>
         <audio id="myAudio">
-            <source src="song.mp3" type="audio/mpeg">
+            <source src="../music.mp3" type="audio/mpeg">
             Ваш браузер не підтримує аудіо.
         </audio>
         
