--- a/index.html
+++ b/index.html
@@ -31,11 +31,11 @@
                 </div>
 
                 <div class="col-12 text-center">
-                    <div class="type-wrap">
-                        <div id="typed-strings" class="typing">
+                    <div class="type-wrap" style="max-width: 200px; height: 100px;">
+                        <div id="typed-strings" class="typing" >
                             <h2>З Днем народження <i id="nae">Маргоша</i></h2>
-                            <h2>Ти потрапила на захоплюючий квест!  </h2>
-                            <h2>Для початку, знайди наступний QR-код і слідуй за підказками!</h2>
+                            <h2>Ти потрапила на захоплюючий <br>квест!  </h2>
+                            <h2>Для початку, знайди наступний <br>QR-код і слідуй за підказками!</h2>
                         </div>
                         <span id="typed" style="white-space:pre;"></span>
                     </div>
