--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
                 </div>
 
                 <div class="col-12 text-center">
-                    <div class="type-wrap" style="max-width: 200px; height: 100px;">
+                    <div class="type-wrap" style=" height: 100px;">
                         <div id="typed-strings" class="typing" >
                             <h2>З Днем народження <i id="nae">Маргоша</i></h2>
                             <h2>Ти потрапила на захоплюючий <br>квест!  </h2>
