--- a/pages/4.html
+++ b/pages/4.html
@@ -27,7 +27,7 @@
                 <div class="col-12 text-center vertical-centred">
                     <div class="type-wrap row">
                       
-                        <div class="puzzle-entry" data-mode="linear" data-text="ДЗ..К.ЛО" data-extracts="3"></div>
+                        <div class="puzzle-entry" data-mode="linear" data-text="ОЛАКРЕЗД" data-extracts="3"></div>
 
 
                     </div>
